docs/history/versioned_docs/version-15.1.0/user/03-Changelog.md
---
id: changelog
title: Changelog
---

## [15.1.0](https://github.com/kirinnee/test-nix-repo/compare/v15.0.0...v15.1.0) (2022-12-11)

### New Packages

- **bashly:** framework to build pure bash CLIs ([1a4692c](https://github.com/kirinnee/test-nix-repo/commit/1a4692c7da61572e9b98a86fa0b50ba35824c3e1))

## [15.0.0](https://github.com/kirinnee/test-nix-repo/compare/v14.1.0...v15.0.0) (2022-12-09)

### Packages Updated

- **aws-export-credentials:** use botocore v1-29-26 ([b856257](https://github.com/kirinnee/test-nix-repo/commit/b856257485038dddc9d8d63a3924a6adb35f09cb))

## [14.1.0](https://github.com/kirinnee/test-nix-repo/compare/v14.0.0...v14.1.0) (2022-12-08)

### New Packages

- **aws-export-credentials:** tool to support .credentials with AWS SSO ([4b13434](https://github.com/kirinnee/test-nix-repo/commit/4b13434861d76ef2a41c9e0505e1c653122b29ec))

## [14.0.0](https://github.com/kirinnee/test-nix-repo/compare/v13.0.1...v14.0.0) (2022-12-08)

### Bug Fixes

- **config:** narwhal ([fa3900c](https://github.com/kirinnee/test-nix-repo/commit/fa3900ca4fbb13dc33ec599d7d7d1e3d2f388b7b))
- **drv:** remove sg from darwin ([9b2e1bd](https://github.com/kirinnee/test-nix-repo/commit/9b2e1bd9f23749bee2e179c81ca8fd713c80cd5e))
- **drv:** sg makeWrapper incorrect syntax ([b675366](https://github.com/kirinnee/test-nix-repo/commit/b67536678d784de1f1b1d0c70898aa2690e51407))
- **drv:** sg makeWrapper incorrect syntax ([e66bdd2](https://github.com/kirinnee/test-nix-repo/commit/e66bdd2fd987fa9c6d7a7cf0ff904ef60b25924f))
- **drv:** sg runtime pnpm ([9d139e7](https://github.com/kirinnee/test-nix-repo/commit/9d139e7eaf85fbdedec9c2df496a6aff36c63f26))
- **drv:** wrapProgram instead of makeWrapper ([e014b4c](https://github.com/kirinnee/test-nix-repo/commit/e014b4c9f2673ac77fedd3757c611e30997fa34d))

### Packages Updated

- **jetbrains:** to 2022-2-3 ([62c2eaf](https://github.com/kirinnee/test-nix-repo/commit/62c2eaf2195f1763781a060f4b7b9839da2fcdfc))

### Removed Packages

- **narwhal:** legacy version 0.3.11 ([183e08b](https://github.com/kirinnee/test-nix-repo/commit/183e08b0ec3d50cbcd8578bd75767f2ea8351d14))

## [13.0.1](https://github.com/kirinnee/test-nix-repo/compare/v13.0.0...v13.0.1) (2022-12-05)

### Bug Fixes

- **drv:** jetbrains derivation not working properly in mac ([06af156](https://github.com/kirinnee/test-nix-repo/commit/06af156f7f075e68c57a6f49ee591f1dc90cb179))

## [13.0.0](https://github.com/kirinnee/test-nix-repo/compare/v12.0.0...v13.0.0) (2022-11-06)

### Packages Updated

- **nix-share:** from v0.1.1 to v0.1.2 ([19e4849](https://github.com/kirinnee/test-nix-repo/commit/19e48497968f0e83dac455341180f6c29a2b5db2))

## [12.0.0](https://github.com/kirinnee/test-nix-repo/compare/v11.2.0...v12.0.0) (2022-11-06)

### Packages Updated

- **nix-share:** from v0.1.0 to v0.1.1 ([1160961](https://github.com/kirinnee/test-nix-repo/commit/116096166334cd43af817c5605d3d2fd0f740f96))

## [11.2.0](https://github.com/kirinnee/test-nix-repo/compare/v11.1.0...v11.2.0) (2022-11-06)

### New Packages

- **nix-share:** p2p sharing client for nix-store ([ed05eba](https://github.com/kirinnee/test-nix-repo/commit/ed05ebaca1258e8db887ee72c281a30030ae7be2))

## [11.1.0](https://github.com/kirinnee/test-nix-repo/compare/v11.0.0...v11.1.0) (2022-11-04)

### New Packages

- **idea-u:** intellij utlimate ([67bdc90](https://github.com/kirinnee/test-nix-repo/commit/67bdc9059b953339d6018dfe00486f70a6b4f48b))

## [11.0.0](https://github.com/kirinnee/test-nix-repo/compare/v10.1.0...v11.0.0) (2022-11-04)

### Packages Updated

- **pls:** allow for recursive parent search ([172e519](https://github.com/kirinnee/test-nix-repo/commit/172e5194efc59fce0e586c1698f72c2d2de5d337))

## [10.1.0](https://github.com/kirinnee/test-nix-repo/compare/v10.0.1...v10.1.0) (2022-10-27)

### New Packages

- **jetbrains:** jetbrains IDE with remote capabilities ([fc90934](https://github.com/kirinnee/test-nix-repo/commit/fc909346c4055c14cccddeace3eb427087784670))

## [10.0.1](https://github.com/kirinnee/test-nix-repo/compare/v10.0.0...v10.0.1) (2022-10-26)

### Bug Fixes

- **drv:** gattai github repository not playing well with fetchFromGitHub ([c59322f](https://github.com/kirinnee/test-nix-repo/commit/c59322f10f8e23787c73b53c093d2a34457c2fa6))

## [10.0.0](https://github.com/kirinnee/test-nix-repo/compare/v9.3.0...v10.0.0) (2022-10-12)

### Packages Updated

- **gattai:** from v0.1.0 to v0.1.1 ([a05198d](https://github.com/kirinnee/test-nix-repo/commit/a05198d8c7c4fa4c5386b68753719a6980274da1))

## [9.3.0](https://github.com/kirinnee/test-nix-repo/compare/v9.2.0...v9.3.0) (2022-10-05)

### New Packages

- **gattai:** fusion ha ([9969b05](https://github.com/kirinnee/test-nix-repo/commit/9969b053e1efb10413e8b804c00968cf7bbe4c2b))

## [9.2.0](https://github.com/kirinnee/test-nix-repo/compare/v9.1.0...v9.2.0) (2022-08-15)

### New Packages

- **spacectl:** spacelift command line interface ([2dac08a](https://github.com/kirinnee/test-nix-repo/commit/2dac08a1b80d7ffdbc81c4003ed7f2599bda842e))
- **spacectl:** spacelift commandline interface ([c063b5e](https://github.com/kirinnee/test-nix-repo/commit/c063b5ea4e8a7fa9f27b15242c8d4cd8fd5557b6))

## [9.1.0](https://github.com/kirinnee/test-nix-repo/compare/v9.0.0...v9.1.0) (2022-05-24)

### New Packages

- **awsmfa:** AWS CLI's mfa for Singapore region ([791ff92](https://github.com/kirinnee/test-nix-repo/commit/791ff92ddbb1922fc5ab677f4b1fca1253d4353d))

## [9.0.0](https://github.com/kirinnee/test-nix-repo/compare/v8.2.1...v9.0.0) (2022-05-20)

### Packages Updated

- **jetbrains:** to v2022.1 ([cd7ff79](https://github.com/kirinnee/test-nix-repo/commit/cd7ff793b3585caea66a981162118384ae0c0b4d))

### [8.2.1](https://github.com/kirinnee/test-nix-repo/compare/v8.2.0...v8.2.1) (2022-02-24)

### Bug Fixes

- **drv:** dotnet-ef not pointing to a SDK ([2439d5e](https://github.com/kirinnee/test-nix-repo/commit/2439d5ebe48cd28213ca9a4ab4e86989896f6234))

## [8.2.0](https://github.com/kirinnee/test-nix-repo/compare/v8.1.0...v8.2.0) (2022-02-24)

### Bug Fixes

- node2nix not executed before commit ([3e58c37](https://github.com/kirinnee/test-nix-repo/commit/3e58c37d95c819c4f4a7063fc9c5e2305f289e62))

### New Packages

- **dotnet-ef:** .NET entity framework CLI ([f08eb66](https://github.com/kirinnee/test-nix-repo/commit/f08eb6678dfdc9ae506e3bbbae9b4d8f96581b2f))

## [8.1.0](https://github.com/kirinnee/test-nix-repo/compare/v8.0.2...v8.1.0) (2022-02-05)

### Bug Fixes

- **drv:** webstorm and idea-u not working ([c7d79b6](https://github.com/kirinnee/test-nix-repo/commit/c7d79b6ee40567ea25d14c72384eeef805751be3))

### New Packages

- **jetbrains:** remote development IDE ([3e7b607](https://github.com/kirinnee/test-nix-repo/commit/3e7b60783a0849fa92b044265ac2eee539a5aac7))

### [8.0.2](https://github.com/kirinnee/test-nix-repo/compare/v8.0.1...v8.0.2) (2021-08-08)

### Bug Fixes

- cd pipeline ([f2450e7](https://github.com/kirinnee/test-nix-repo/commit/f2450e77ee0fe0c4ed3ca09633a1ebe195cb57f8))

### [8.0.1](https://github.com/kirinnee/test-nix-repo/compare/v8.0.0...v8.0.1) (2021-08-08)

### Bug Fixes

- missing NIX_PATH ([0934611](https://github.com/kirinnee/test-nix-repo/commit/0934611021e662e27b6ff8f950e210be49f35474))
- missing NIX_PATH ([39d8f51](https://github.com/kirinnee/test-nix-repo/commit/39d8f514f21eda3117b42c3cf84aff2cab4f30a1))
- missing NIX_PATH ([4f17825](https://github.com/kirinnee/test-nix-repo/commit/4f178259af5b45c9c83d9f680424d4cfb3b37b0d))
- missing NIX_PATH ([faf1a92](https://github.com/kirinnee/test-nix-repo/commit/faf1a926300c410989ea5827f2275f3d0a7f0a06))

## [8.0.0](https://github.com/kirinnee/test-nix-repo/compare/v7.0.0...v8.0.0) (2021-08-08)

### Bug Fixes

- ci env not having bash ([5bcae3a](https://github.com/kirinnee/test-nix-repo/commit/5bcae3a8a936d751274042558f35adbded734e91))
- ci env not having bash ([c256901](https://github.com/kirinnee/test-nix-repo/commit/c2569017a11019a164b447d727d493f8b8dfb182))
- ci env not having bash ([956ec41](https://github.com/kirinnee/test-nix-repo/commit/956ec41b8c822a66ec1dc28722a796f2c42576f5))
- **ci:** incorrec nix shell configuration ([4ba7815](https://github.com/kirinnee/test-nix-repo/commit/4ba781561c997ae7b9c1af5c69efc38fb9b23470))
- **ci:** incorrect env shell ([1bcf59a](https://github.com/kirinnee/test-nix-repo/commit/1bcf59a67be4f30f52b2c0c08d80f7044a7fc05e))
- missing NIX_PATH ([b1b2e1f](https://github.com/kirinnee/test-nix-repo/commit/b1b2e1fec24d253b9b88dc9ac4c237dd540c35b4))
- missing NIX_PATH ([5befcd6](https://github.com/kirinnee/test-nix-repo/commit/5befcd6b71e963306dcc698c4fc60c8e33e3cd4d))
- missing NIX_PATH ([5970ee5](https://github.com/kirinnee/test-nix-repo/commit/5970ee5ccaf681395a19632c51aa65a71ef3e3f6))
- missing NIX_PATH ([19a91fc](https://github.com/kirinnee/test-nix-repo/commit/19a91fc26a5714db68261f55625b289d7093f933))
- missing NIX_PATH ([4311dc8](https://github.com/kirinnee/test-nix-repo/commit/4311dc8f251a7a797dbcfa3b57a072adf98b4973))
- missing NIX_PATH ([cb4f09c](https://github.com/kirinnee/test-nix-repo/commit/cb4f09c87f483c26cd4037fc1bb6fd00d379aaa3))
- missing NIX_PATH ([df53387](https://github.com/kirinnee/test-nix-repo/commit/df5338753b015e3699ab79b751d7daa466b0f78e))
- node gen outdated ([9ac2bbb](https://github.com/kirinnee/test-nix-repo/commit/9ac2bbb46d842763acbe505e878c421c7005b9eb))

### New Packages

- ci configuration with nix ([1aeabea](https://github.com/kirinnee/test-nix-repo/commit/1aeabeaf443223974a37a9222ce5ab489cfc7375))

### Packages Updated

- **sg:** from v0.4.0 to 0.4.1 ([7d582ee](https://github.com/kirinnee/test-nix-repo/commit/7d582eee09df032de3de12b1ba972836d0cf07af))

## [7.0.0](https://github.com/kirinnee/test-nix-repo/compare/v6.2.1...v7.0.0) (2021-08-04)

### Packages Updated

- **sg:** from v0.3.0 to v0.4.0 ([fb85bc3](https://github.com/kirinnee/test-nix-repo/commit/fb85bc35b6882093d1b0ddfe74f79db0563e9543))

### [6.2.1](https://github.com/kirinnee/test-nix-repo/compare/v6.2.0...v6.2.1) (2021-08-04)

### Bug Fixes

- ci prettier not working ([7b5c6dc](https://github.com/kirinnee/test-nix-repo/commit/7b5c6dc4c38ff0c33e5f7a4f59c090f6cee44b54))

## [6.2.0](https://github.com/kirinnee/test-nix-repo/compare/v6.1.0...v6.2.0) (2021-08-04)

### Bug Fixes

- versioning not saved ([47bc58b](https://github.com/kirinnee/test-nix-repo/commit/47bc58bbd3c4e329cd24b3c34a92756a1bff7449))
- versioning not saved ([c465d03](https://github.com/kirinnee/test-nix-repo/commit/c465d03fd1e28c7832d3a8eabbf50035d21473ca))

### New Packages

- allow for versioning ([4a3c7ab](https://github.com/kirinnee/test-nix-repo/commit/4a3c7abecb77bdd469408e9fae8cc1da4ba715f4))

## [6.1.0](https://github.com/kirinnee/test-nix-repo/compare/v6.0.0...v6.1.0) (2021-08-04)

### New Packages

- versioned documentation ([612c018](https://github.com/kirinnee/test-nix-repo/commit/612c018878fb4837cfe3147529f9116c9aff6c06))

## [6.0.0](https://github.com/kirinnee/test-nix-repo/compare/v5.0.0...v6.0.0) (2021-08-04)

### New Packages

- **sg:** v0.2.6 to v0.2.7 ([b4ac965](https://github.com/kirinnee/test-nix-repo/commit/b4ac9651f98cbad5e5fef8dbe53359d2e35ca37c))
- versioning to semantic release ([dbd7c20](https://github.com/kirinnee/test-nix-repo/commit/dbd7c20fd43569d3935c57daa0fda3b0341ff963))

### Packages Updated

- **sg:** from v0.2.6 to v0.3.0 ([7c0502a](https://github.com/kirinnee/test-nix-repo/commit/7c0502a4fba2523d440014afe589963b4a47416b))

## [5.0.0](https://github.com/kirinnee/test-nix-repo/compare/v4.0.0...v5.0.0) (2021-08-04)

### Bug Fixes

- pre-commit hook Commit Convention EOL ([be0fb72](https://github.com/kirinnee/test-nix-repo/commit/be0fb72f8d860dda77dc794ec48d6152dac45ad4))

### Packages Updated

- **sg:** from v0.2.3 to v0.2.6 ([aeb7c54](https://github.com/kirinnee/test-nix-repo/commit/aeb7c5418957b56edae54abd0307ee5cbedfaf77))

### Documentation Updates

- **fix:** broken link ([f186616](https://github.com/kirinnee/test-nix-repo/commit/f186616745fbf2b974b8d7288af4a5e71af80897))

## [4.0.0](https://github.com/kirinnee/test-nix-repo/compare/v3.0.1...v4.0.0) (2021-08-03)

### Packages Updated

- **sg:** from v0.2.2 to v0.2.3 ([154e79a](https://github.com/kirinnee/test-nix-repo/commit/154e79afcc1e170983f99699c6eecbe80396dbc7))

### [3.0.1](https://github.com/kirinnee/test-nix-repo/compare/v3.0.0...v3.0.1) (2021-08-03)

### Bug Fixes

- **config:** atomi releaser config to preserve documentation ([8f834ba](https://github.com/kirinnee/test-nix-repo/commit/8f834baa6e85724ba2011420095cf930f3815f9b))
- clear-cache for cd pipeline ([d90f571](https://github.com/kirinnee/test-nix-repo/commit/d90f571a28956d1cd4ac8960452646f0643646da))
- missing node2nix in PATH ([5e2fb7f](https://github.com/kirinnee/test-nix-repo/commit/5e2fb7f8414889ffdd4ee787ef244c94675a6f11))
